--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -33,47 +34,47 @@
         </ul>
         <ul>
             <li>
-                <img src="./images/img1.jpg" alt="">
+                <img src="./images/img1.jpg" alt="Технокряк" width="370">
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/img2.jpg" alt="">
+                <img src="./images/img2.jpg" alt="Постер"width="370">
                 <h3>Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/img3.jpg" alt="">
+                <img src="./images/img3.jpg" alt="Ресторан Seafood"width="370">
                 <h3>Ресторан Seafood</h3>
                 <p>Додаток</p>
             </li>
             <li>
-                <img src="./images/img4.jpg" alt="">
+                <img src="./images/img4.jpg" alt="Навушники"width="370">
                 <h3>Проєкт Prime</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/img5.jpg" alt="">
+                <img src="./images/img5.jpg" alt="Дві коробки"width="370">
                 <h3>Проєкт Boxes</h3>
                 <p>Додаток</p>
             </li>
             <li>
-                <img src="./images/img6.jpg" alt="">
+                <img src="./images/img6.jpg" alt="Монітор"width="370">
                 <h3>Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/img7.jpg" alt="">
+                <img src="./images/img7.jpg" alt="Журнал"width="370">
                 <h3>Видання Limited Edition</h3>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/img8.jpg" alt="">
+                <img src="./images/img8.jpg" alt="Етикетка"width="370">
                 <h3>Проєкт LAB</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/img9.jpg" alt="">
+                <img src="./images/img9.jpg" alt="Ноутбук"width="370">
                 <h3>Growing Business</h3>
                 <p>Додаток</p>
             </li>
