--- a/portfolio.html
+++ b/portfolio.html
@@ -5,91 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <a lang="en" href="">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+    <header class="header">
+        <a class="link" lang="en" href=""><span class="header-logo">Web</span><span class="header-second-part">Studio</span></a>
+        <nav class="header-nav">
+            <ul class="header-contacts list">
+                <li><a class="header-link link" href="./index.html">Студія</a></li>
+                <li><a class="header-link link-current link" href="">Портфоліо</a></li>
+                <li><a class="header-link link" href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list list">
+                <li><a href="mailto:info@devstudio.com" class="header-mailto link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-    <section>
-        <h2>Портфоліо</h2>
-        <ul>
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+    <section class="portfolio-hero">
+        <h2 class="visualy-hidden title">Портфоліо</h2>
+        <ul class="portfolio-list list">
+            <li><button type="button" class="portfolio-btn btn-current link">Усі</button></li>
+            <li><button type="button" class="portfolio-btn link">Веб-сайти</button></li>
+            <li><button type="button" class="portfolio-btn link">Додатки</button></li>
+            <li><button type="button" class="portfolio-btn link">Дизайн</button></li>
+            <li><button type="button" class="portfolio-btn link">Маркетинг</button></li>
         </ul>
-        <ul>
-            <li>
+
+        <ul class="projects list">
+            <li class="project-items">
                 <img src="./images/img1.jpg" alt="Технокряк" width="370">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="project-title">Технокряк</h3>
+                <p class="project-text">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images/img2.jpg" alt="Постер"width="370">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+
+
+            <li class="project-items">
+                <img src="./images/img2.jpg" alt="Постер" width="370">
+                <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                <p class="project-text">Дизайн</p>
             </li>
-            <li>
-                <img src="./images/img3.jpg" alt="Ресторан Seafood"width="370">
-                <h3>Ресторан Seafood</h3>
-                <p>Додаток</p>
+
+
+            <li class="project-items">
+                <img src="./images/img3.jpg" alt="Ресторан Seafood" width="370">
+                <h3 class="project-title">Ресторан <span lang="en">Seafood</span></h3> 
+                <p class="project-text">Додаток</p>
             </li>
-            <li>
-                <img src="./images/img4.jpg" alt="Навушники"width="370">
-                <h3>Проєкт Prime</h3>
-                <p>Маркетинг</p>
+
+
+            <li class="project-items">
+                <img src="./images/img4.jpg" alt="Навушники" width="370">
+                <h3 class="project-title">Проєкт <span lang="en">Prime</span></h3>
+                <p class="project-text">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images/img5.jpg" alt="Дві коробки"width="370">
-                <h3>Проєкт Boxes</h3>
-                <p>Додаток</p>
+
+
+            <li class="project-items">
+                <img src="./images/img5.jpg" alt="Дві коробки" width="370">
+                <h3 class="project-title">Проєкт <span lang="en">Boxes</span></h3>
+                <p class="project-text">Додаток</p>
             </li>
-            <li>
-                <img src="./images/img6.jpg" alt="Монітор"width="370">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+
+
+            <li class="project-items">
+                <img src="./images/img6.jpg" alt="Монітор" width="370">
+                <h3 class="project-title" lang="en">Inspiration has no Borders</h3>
+                <p class="project-text">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images/img7.jpg" alt="Журнал"width="370">
-                <h3>Видання Limited Edition</h3>
-                <p>Дизайн</p>
+
+
+            <li class="project-items">
+                <img src="./images/img7.jpg" alt="Журнал" width="370">
+                <h3 class="project-title">Видання <span lang="en">Limited Edition</span></h3>
+                <p class="project-text">Дизайн</p>
             </li>
-            <li>
-                <img src="./images/img8.jpg" alt="Етикетка"width="370">
-                <h3>Проєкт LAB</h3>
-                <p>Маркетинг</p>
+
+
+            <li class="project-items">
+                <img src="./images/img8.jpg" alt="Етикетка" width="370">
+                <h3>Проєкт <span lang="en">LAB</span></h3>
+                <p class="project-text">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images/img9.jpg" alt="Ноутбук"width="370">
-                <h3>Growing Business</h3>
-                <p>Додаток</p>
+
+
+            <li class="project-items">
+                <img src="./images/img9.jpg" alt="Ноутбук" width="370">
+                <h3 class="project-title" lang="en">Growing Business</h3>
+                <p class="project-text">Додаток</p>
             </li>
         </ul>
+
     </section>
     </main>
-
-      <footer>
-        <a lang="en" href="">WebStudio</a>
-        <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/DUpamdZJLcV7v7nf7" target="_blank" 
-            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <footer class="footer">
+        <a class="link" lang="en" href=""><span class="footer-logo">Web</span><span class="footer-second-part">Studio</span></a>
+        <address class="address">
+        <ul class="footer-list list">
+            <li class="footer-item"><a href="https://goo.gl/maps/DUpamdZJLcV7v7nf7" target="_blank" 
+            rel="noopener noreferrer nofollow" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="footer-item"><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer-item"><a class="footer-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </address>
     </footer>
